# vn1forecasting

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo.ipynb  example.ipynb
tests/: test_main.py
vn1forecasting/: __main__.py  data.py  dualt.py  model.py  pipeline.py  results.py  utils.py
